# own_raytracing

./: .gitignore  ApplicationPrototype.hpp  CMakeLists.txt  CMakePresets.json  IntersectedWitDisk.hpp  IntersectedWithPlane.hpp  IntersectedWithSphere.hpp  Main.cpp  Plane.cpp  Plane.hpp  README.md  RayTrace.sln  Tracer.h  main.cpp
Fabrics/: CMakeLists.txt
Fabrics/Base/: Fabric.hpp  WriterFabric.hpp
Fabrics/Base/Source/: Fabric.cpp  ReaderFabric.cpp  WriterFabric.cpp
Fabrics/FabricSelector/Source/: FabricSelector.cpp
Fabrics/RenderHandler/: CMakeLists.txt
Fabrics/RenderHandler/Base/: ImageRenderHandlerFabric.hpp  RenderHandlerFabric.hpp
Fabrics/RenderHandler/Base/ Source/: ImageRenderHandlerFabric.cpp
Fabrics/Scene/: CMakeLists.txt
Fabrics/Scene/Base/: SceneFabric.hpp  SceneLoader.hpp  SceneSelector.hpp
Fabrics/Scene/Base/Source/: SceneLoader.cpp  SceneSelector.cpp
Fabrics/Scene/SceneFabricSelector/: SceneFabricSelector.hpp
Fabrics/Scene/SceneFabricSelector/Source/: SceneFabricSelector.cpp
Geometry/: Disk.hpp  Ray.hpp  Sphere.hpp  Vector3d.hpp
Geometry/Source/: Disk.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Vector3d.cpp
Graphics/: CMakeLists.txt  Graphics.vcxproj  Graphics.vcxproj.filters
Graphics/Geometry/: CMakeLists.txt
Graphics/Geometry/Intersectables/: AABB3.hpp  BVH.hpp  Disk.hpp  Intersectable.h  Plane.hpp  Sphere.hpp  Triangle.hpp
Graphics/Geometry/Intersectables/Source/: AABB3.cpp  BVH.cpp  Disk.cpp  Plane.cpp  Sphere.cpp  Triangle.cpp
Graphics/Geometry/Primitives/: Matrix.hpp  Point3d.hpp  Ray.hpp  TransformFactory.hpp  Vector3d.hpp  Vector4.hpp
Graphics/Geometry/Primitives/Source/: Matrix.cpp  Point3d.cpp  Ray.cpp  Vector3d.cpp  Vector4.cpp
Graphics/Light/: AmbientLight.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp
Graphics/Light/Source/: AmbientLight.cpp  DirectionalLight.cpp  PointLight.cpp
Graphics/Render/: CMakeLists.txt  Camera.h  Scene.h  Screen.h  Tracer.h
Graphics/Render/Source/: Scene.cpp  Screen.cpp  Tracer.cpp
Graphics/RenderHandler/: CmdRenderHandler.hpp  ImageRenderHandler.hpp  RenderHandler.hpp
Graphics/RenderHandler/Source/: CmdRenderHandler.cpp  ImageRenderHandler.cpp
ImageProcessors/: CMakeLists.txt  ImageProcessors.vcxproj  ImageProcessors.vcxproj.filters
ImageProcessors/Converters/: Converter.hpp  PPMConverter.hpp
ImageProcessors/Converters/Source/: BMP32Converter.cpp  PPMConverter.cpp
ImageProcessors/Fabrics/: CMakeLists.txt
ImageProcessors/Fabrics/Base/: ReaderFabric.hpp
ImageProcessors/Fabrics/Base/Source/: Fabric.cpp  ReaderFabric.cpp
ImageProcessors/Fabrics/FabricSelector/: FabricSelector.hpp
ImageProcessors/Formats/: BMP.hpp  BMPHeader.hpp  ImageFormat.hpp  PPM.hpp  PPMHeader.hpp
ImageProcessors/Formats/Source/: BMP.cpp  PPM.cpp
ImageProcessors/Readers/: BMPReader.hpp  PPMReader.hpp  Reader.hpp
ImageProcessors/Readers/Source/: BMPReader.cpp  PPMReader.cpp
ImageProcessors/Writers/: BMPWriter.hpp  PPMWriter.hpp  Writer.hpp
ImageProcessors/Writers/Source/: BMPWriter.cpp  PPMWriter.cpp
ObjReader/: CMakeLists.txt  ObjReader.hpp
ObjReader/Source/: ObjReader.cpp
RayTrace/: Camera.h  Intersectable.h  IntersectedWithDisk.hpp  IntersectedWithPlane.hpp  IntersectedWithSphere.hpp  Main.cpp  README.md  RayTrace.vcxproj  RayTrace.vcxproj.filters  Scene.cpp  Scene.h  Screen.h  Tracer.h  file.ppm  new_test_ppm.ppm  sample_new.ppm
RayTrace/FileProcessing/CmdParser/: CmdParser.hpp
RayTrace/FileProcessing/CmdParser/Source/: CmdParser.cpp
RayTrace/FileProcessing/Converters/: BMP32Converter.hpp  Converter.hpp  PPMConverter.hpp
RayTrace/FileProcessing/Converters/Source/: BMP32Converter.cpp  PPMConverter.cpp
RayTrace/FileProcessing/Formats/: BMP.hpp  BMP32.hpp  PPM.hpp
RayTrace/FileProcessing/Readers/: BMPReader.hpp  PPMReader.hpp  Reader.hpp
RayTrace/FileProcessing/Readers/Source/: BMPReader.cpp  PPMReader.cpp
RayTrace/FileProcessing/Writers/: BMPWriter.hpp  PPMWriter.hpp
RayTrace/FileProcessing/Writers/Source/: BMPWriter.cpp  PPMWriter.cpp
RayTrace/Geometry/: Disk.hpp  Plane.hpp  Sphere.hpp  Vector3d.hpp
RayTrace/Geometry/Intersectables/: Disk.hpp  Intersectable.h  Plane.hpp  Sphere.hpp
RayTrace/Geometry/Intersectables/Source/: Disk.cpp  Plane.cpp  Sphere.cpp
RayTrace/Geometry/Primitives/: Ray.hpp  Vector3d.hpp
RayTrace/Geometry/Primitives/Source/: Ray.cpp  Vector3d.cpp
RayTrace/Geometry/Source/: Disk.cpp  Plane.cpp  Sphere.cpp  Vector3d.cpp
RayTrace/Render/: Camera.h  Screen.h  Tracer.h
RayTrace/Render/Source/: Screen.cpp  Tracer.cpp
RayTrace/x64/Debug/: RayTrace.exe.recipe  RayTrace.ilk  main.obj.enc  tracer.obj.enc  vc143.idb
RayTrace/x64/Debug/RayTrace.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tests/: Main.cpp  Tests.cpp  Tests.cpp.orig  Tests.vcxproj  Tests.vcxproj.filters  Tests_LOCAL_1127.cpp  pch.h
Tests/CmdParser/: Calculate.cpp  Check.cpp
Tests/ImageProcessors/Readers/: PPMReader.cpp
Tests/Tools/CmdParser/: Calculate.cpp  Check.cpp
Tests/x64/Debug/: Tests.dll.recipe  Tests.ilk  vc143.idb
Tests/x64/Debug/Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tests.lastbuildstate  Tests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tools/: CMakeLists.txt  Tools.vcxproj  Tools.vcxproj.filters
Tools/CmdParser/: CmdParser.hpp
Tools/CmdParser/Source/: CmdParser.cpp
Tools/FileReader/: FileReader.hpp
Tools/FileReader/Source/: FileReader.cpp
x64/Debug/: IntersactionTests.exp  IntersactionTests.lib  RaytracingTests.exp  RaytracingTests.lib  Tests.exp  Tests.lib
